# remtodo

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  flake.nix
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: config.rs  error.rs  filter.rs  launchd.rs  lib.rs  lock.rs  main.rs  mapping.rs  reminder.rs  swift_cli.rs  undo.rs
src/sync/: actions.rs  config.rs  engine.rs  mod.rs  persistence.rs  recurrence.rs  safety.rs  state.rs
swift/: Package.swift
swift/Sources/ReminderTypes/: DateFormatting.swift  InputParsing.swift  Types.swift
swift/Sources/reminders-helper/: main.swift
swift/Tests/ReminderTypesTests/: DateFormattingTests.swift  InputParsingTests.swift
tests/: integration_reminders.rs
