[package]
name = "remtodo"
version = "1.0.0"
edition = "2021"

[dependencies]
todo_lib = "10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
thiserror = "2"
toml = "1.0"
log = "0.4"
env_logger = "0.11"
signal-hook = "0.3"

[dev-dependencies]
tempfile = "3"
